# ergani-rust-sdk

./: .gitignore  Cargo.toml  README.md  fleet.toml  sbom.spdx.json
.github/workflows/: ci.yml
ergani/: Cargo.toml  fleet.toml
ergani/.cargo/: config.toml
ergani/resources/tests/: company_daily_schedule_fixture.json  company_overtime_fixture.json  company_weekly_schedule_fixture.json  company_work_card_fixture.json  employee_daily_schedule_fixture.json  employee_weekly_schedule_fixture.json  overtime_fixture.json  work_day_details_fixture.json
ergani/src/: api_error.rs  auth.rs  client.rs  endpoint.rs  ergani_fetch_response.rs  lib.rs
ergani/src/auth/: authentication_response.rs  authenticator.rs  login_payload.rs  mod.rs
ergani/src/internal/: deserializers.rs  mod.rs  utils.rs
ergani/src/models/: mod.rs  overtime.rs  overtime_builder.rs  weekly_work_days.rs  work_card.rs  work_card_builder.rs  work_day_details.rs  work_day_details_builder.rs
ergani/src/models/company/: company_daily_schedule.rs  company_daily_schedule_builder.rs  company_overtime.rs  company_overtime_builder.rs  company_weekly_schedule.rs  company_weekly_schedule_builder.rs  company_work_card.rs  company_work_card_builder.rs  mod.rs
ergani/src/models/employee/: employee_announcement.rs  employee_daily_schedule.rs  employee_daily_schedule_builder.rs  employee_weekly_schedule.rs  employee_weekly_schedule_builder.rs  mod.rs
ergani/src/models/types/: late_declaration_justification_type.rs  mod.rs  overtime_justification_type.rs  schedule_work_type.rs  work_card_movement_type.rs
ergani/src/responses/: day_schedule_response.rs  lookup_response.rs  mod.rs  overtime_response.rs  week_schedule_response.rs  work_card_response.rs
ergani/src/tests/: mod.rs
src/: fetch_daily_schedule.rs  fetch_overtime.rs  fetch_submission_types.rs  fetch_weekly_schedule.rs  fetch_work_cards.rs  main.rs  submit_daily_schedule.rs  submit_employee_announcement.rs  submit_overtime.rs  submit_weekly_schedule.rs  submit_work_card.rs
