[package]
name = "ergani-rust-sdk"
version = "0.2.1"
edition = "2021"
description = "Ergani Rust SDK"
license = "MIT"

[dependencies]
ergani = { path = "ergani", version = "0.2.1" }
anyhow = "1.0"
tokio = { version = "1.45.1", features = ["full"] }
chrono = "0.4"
comfy-table = "7.1.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[workspace]
members = ["ergani"]
