[package]
name = "ergani"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Rust SDK for the Greek government Ergani API for employee workflows"
readme = "../README.md"
homepage = "https://github.com/pavlospt/ergani-rust-sdk"
repository = "https://github.com/pavlospt/ergani-rust-sdk"
keywords = ["ergani", "api", "sdk", "rust"]
documentation = "https://docs.rs/ergani"

[dependencies]
thiserror = "2.0"
anyhow = "1.0"
tokio = "1.45.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
chrono = { version = "0.4.41", features = ["serde"] }
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1.88"
serde_derive = "1.0.197"
bon = "3.6.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
